# personal-gpt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prototools  Dockerfile.external  Dockerfile.local  Makefile  README.md  add-packages.bat  docker-compose.yaml  pyproject.toml  requirements.txt  settings.yaml  setup.bat  setup.sh  taskfile.yaml
.cspell/: custom-dictionary.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: preview-docs.yml  publish-docs.yml  release-please.yml  stale.yml
.github/workflows/actions/install_dependencies/: action.yml
fern/: README.md  fern.config.json
fern/docs/pages/installation/: installation.mdx
fern/docs/pages/manual/: ingestion.mdx  llms.mdx  settings.mdx  ui.mdx  vectordb.mdx
fern/docs/pages/overview/: quickstart.mdx  welcome.mdx
fern/docs/pages/recipes/: list-llm.mdx
fern/openapi/: openapi.json
private_gpt/ui/: ui.py
scripts/: ingest_folder.py  setup
src/personal_gpt/: __main__.py  di.py  launcher.py  main.py  paths.py
src/personal_gpt/components/embedding/: embedding_component.py
src/personal_gpt/components/ingest/: ingest_component.py  ingest_helper.py
src/personal_gpt/components/llm/: llm_component.py  prompt_helper.py
src/personal_gpt/components/llm/custom/: sagemaker.py
src/personal_gpt/components/node_store/: node_store_component.py
src/personal_gpt/components/vector_store/: vector_store_component.py
src/personal_gpt/open_ai/: openai_models.py
src/personal_gpt/server/chat/: chat_router.py  chat_service.py
src/personal_gpt/server/chunks/: chunks_router.py  chunks_service.py
src/personal_gpt/server/completions/: completions_router.py
src/personal_gpt/server/embeddings/: embeddings_router.py  embeddings_service.py
src/personal_gpt/server/ingest/: ingest_router.py  ingest_service.py
src/personal_gpt/server/utils/: auth.py
src/personal_gpt/settings/: settings.py  settings_loader.py
src/personal_gpt/ui/: ui.py
tests/: test_prompt_helper.py
tests/fixtures/: auto_close_qdrant.py  fast_api_test_client.py  ingest_helper.py  mock_injector.py
tests/server/chat/: test_chat_routes.py
tests/server/chunks/: test_chunk_routes.py
tests/server/embeddings/: test_embedding_routes.py
tests/server/ingest/: test_ingest_routes.py
tests/server/utils/: test_simple_auth.py
tests/settings/: test_settings.py  test_settings_loader.py
